# muscal

./: README.md  configure.ac
MSCAL-orig/: mscal.h  oldreadNetcdf.c  query_mod.py  r  readNetcdf.c  rr  um_netcdf.h
data/: Makefile.am  config  make_data_files.py  rewrite2bin.py
src/: Makefile.am  Nclosest.c  build_kdtree.c  in  kdtree_util.c  kdtree_util.h  mscal.c  mscal.h  mscal_query.c  mscal_util.c  mscal_util.h  muscal.c  muscal.h  muscal_dataset.c  muscal_dataset.h  muscal_query.c  muscal_surface.c  muscal_util.c  muscal_util.h  query_kdtree.c  r  rr  um_netcdf.c  um_netcdf.h  x  xx
test/: r
